--- a/school-app/package.json
+++ b/school-app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "lucide-react": "^0.462.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
